# openapi.yaml
@@ -174,6 +174,33 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
+    /api/get_all_info:
+        get:
+            tags:
+                - Transaction
+            operationId: Transaction_GetAllInfo
+            parameters:
+                - name: start
+                  in: query
+                  schema:
+                    type: string
+                - name: end
+                  in: query
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/GetAllInfoReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
     /api/get_all_two:
         get:
             tags:
@@ -800,6 +827,24 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
+    /api/get_user_r_event:
+        get:
+            tags:
+                - Transaction
+            operationId: Transaction_GetUserREvent
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/GetUserREventReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
     /api/remove_liquidity:
         post:
             tags:
@@ -1147,6 +1192,43 @@ components:
                     type: string
                 openTime:
                     type: string
+        GetAllInfoReply:
+            type: object
+            properties:
+                userCount:
+                    type: string
+                todayUserCount:
+                    type: string
+                todayMintedCount:
+                    type: string
+                todayMintedSum:
+                    type: string
+                mintedCount:
+                    type: string
+                mintedSum:
+                    type: string
+                mintedCountOne:
+                    type: string
+                mintedSumOne:
+                    type: string
+                mintedCountTwo:
+                    type: string
+                mintedSumTwo:
+                    type: string
+                mintedCountThree:
+                    type: string
+                mintedSumThree:
+                    type: string
+                buyCount:
+                    type: string
+                buySum:
+                    type: string
+                todayBuyCount:
+                    type: string
+                todayBuySum:
+                    type: string
+                openReward:
+                    type: string
         GetAllReply:
             type: object
             properties:
@@ -1429,6 +1511,9 @@ components:
                     type: string
                 lpAmountTotal:
                     type: string
+        GetUserREventReply:
+            type: object
+            properties: {}
         GoogleProtobufAny:
             type: object
             properties:
